# local-ai-trascriber

./: .gitignore  app.index.html  readme.md  template.md
backend/: app.py  pyproject.toml  run_tests.py  run_tests.sh  start.sh  test_transcribe.py  transcribe.py
backend/src/: app.py  llm_fixer.py  model.py  test_llm_fixer.py  test_transcribe.py  transcribe.py
backend/src/templates/: index.html
backend/src/tests/: test_llm_fixer.py  test_transcribe.py
backend/templates/: index.html
