[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
requires-python = "==3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "httpx",
    "transformers",
    "torch",
    "ffmpeg-python",
    "numpy",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
exclude = ["templates*", "temp_audio*", "__pycache__*"]
